搭建窗口框架

--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign.vcxproj
@@ -141,6 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AddressDataInterface.cpp" />
+    <ClCompile Include="AddressInfoBtn.cpp" />
     <ClCompile Include="AddressWidget.cpp" />
     <ClCompile Include="AdressApplication.cpp" />
     <ClCompile Include="Basic.cpp" />
@@ -196,6 +198,8 @@
     <ClCompile Include="LoadThread.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWidget.cpp" />
+    <ClCompile Include="RecordDataInterface.cpp" />
+    <ClCompile Include="RecordInfoBtn.cpp" />
     <ClCompile Include="RecordWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +223,8 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="RecordDataInterface.h" />
+    <ClInclude Include="RecordInfoBtn.h" />
     <CustomBuild Include="RecordWidget.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing RecordWidget.h...</Message>
@@ -291,6 +297,8 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_SQL_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtSql" "-I$(QTDIR)\include\QtWidgets"</Command>
     </CustomBuild>
+    <ClInclude Include="AddressDataInterface.h" />
+    <ClInclude Include="AddressInfoBtn.h" />
     <ClInclude Include="Basic.h" />
     <ClInclude Include="DatabaseInterface.h" />
     <ClInclude Include="GeneratedFiles\ui_AdressesWidget.h" />
